Moved tests, to show coverage. Updated TodoListService. Added IT for TodoListService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Uncomment the 2 lines below to show sql queries.
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
