--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Athens
+spring.jackson.time-zone=Europe/Athens
 # Uncomment the 2 lines below to show sql queries.
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
