Added Integration tests for TodoController.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Athens
 spring.jackson.time-zone=Europe/Athens
 # Uncomment the 2 lines below to show sql queries.
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
