--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 # suppress inspection "UnusedProperty" for whole file
+## DB Configuration.
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Athens
-spring.jackson.time-zone=Europe/Athens
 # Uncomment the 2 lines below to show sql queries.
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+## Timezone Configuration
+spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Athens
+spring.jackson.time-zone=Europe/Athens
+### AUTH Server.
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
