--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-## DB Configuration.
-spring.datasource.url=jdbc:postgresql://localhost:5432/
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-# Uncomment the 2 lines below to show sql queries.
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=@spring.profiles.active@
 ## Timezone Configuration
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Athens
 spring.jackson.time-zone=Europe/Athens
