--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -7,6 +7,7 @@ services:
     env_file:
       - .env
     environment:
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
