--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 ## DB Configuration.
-spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # Uncomment the 2 lines below to show sql queries.
