--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # Uncomment the 2 lines below to show sql queries.
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
